Improved memory management of Praat objects